--- a/main/webapp/css/style.css
+++ b/main/webapp/css/style.css
@@ -4,6 +4,9 @@
 	padding : 0;
 	margin : 0;
 }
+main{
+	overflow : auto;
+}
 
 
 /* 
@@ -62,14 +65,17 @@ select{
 
 
 /* 회원가입 */
+
 .joinbox{
-	position : fixed;
+	position : relative;
 	top : 0;
 	left : 0;
 	width : 100%;
 	height : 100%;
 	background-color : #ddd;
+	
 }
+
 .join-content{
 	background-color : #fff;
 	width : 400px;
@@ -79,7 +85,7 @@ select{
 }
 .join-content h2{
 	width : 100%;
-	height : auto;
+	height : 80px;
 	line-height : 100px;
 	text-align : center;
 	font-size : 20px;
