--- a/main/webapp/css/style.css
+++ b/main/webapp/css/style.css
@@ -47,6 +47,7 @@ input[type=password]{
 	float : left;
 	width : 50%;
 	padding : 8px;
+	border : 1px solid #000;
 }
 .btn-group::after{
 	content : "";
@@ -56,8 +57,8 @@ input[type=password]{
 .font-size-15{
 	font-size : 15px;
 }
-.margin-bottom-3{
-	margin-bottom : 3px;
+.margin-bottom-10{
+	margin-bottom : 10px;
 }
 select{
 	width : 130px;
@@ -68,11 +69,13 @@ select{
 
 .joinbox{
 	position : relative;
+	padding-top : 50px;
+	padding-bottom : 50px;
 	top : 0;
 	left : 0;
 	width : 100%;
 	height : 100%;
-	background-color : #ddd;
+	background-color : #b0e0e6;
 	
 }
 
