--- a/main/webapp/css/style.css
+++ b/main/webapp/css/style.css
@@ -30,23 +30,23 @@ button{
 
 /* 따로 설정 (회원가입, 로그인 둘 다 사용)*/
 .form-group{
-	margin-top : 15px;
+	margin-top : 50px;
 	margin-left : 10px;
 }
 input[type=text]{
 	width : 90%;
-	padding : 8px;
+	padding : 15px;
 	border : 1px solid #ddd;
 }
 input[type=password]{
 	width : 90%;
-	padding : 8px;
+	padding : 15px;
 	border : 1px solid #ddd;
 }
 .btn-group button{
 	float : left;
 	width : 50%;
-	padding : 8px;
+	padding : 15px;
 	border : 1px solid #000;
 }
 .btn-group::after{
@@ -55,10 +55,10 @@ input[type=password]{
 	clear : both;
 }
 .font-size-15{
-	font-size : 15px;
+	font-size : 18px; font-weight:700;
 }
 .margin-bottom-10{
-	margin-bottom : 10px;
+	margin-bottom : 10px; font-weight:700;
 }
 select{
 	width : 130px;
@@ -68,22 +68,19 @@ select{
 /* 회원가입 */
 
 .joinbox{
-	position : relative;
 	padding-top : 50px;
 	padding-bottom : 50px;
 	top : 0;
 	left : 0;
-	width : 100%;
+	width : auto;
 	height : 100%;
-	background-color : #b0e0e6;
-	
-}
-
+	background-color: rgb(220, 234, 250);
+	}
 .join-content{
 	background-color : #fff;
-	width : 400px;
-	margin : auto;
-	padding : 10px;
+	
+	margin : 0 150px;;
+	padding : 50px;
 	position : relative;
 }
 .join-content h2{
@@ -95,4 +92,24 @@ select{
 	font-weight : normal;
 }
 
+.form-group .user-box {
+	height:15px;
+}
 
+.option_box {
+	height:45px;
+	}
+
+#birth_box{
+	
+	width:100%;
+}
+#birth_yy , #birth_mm , #birth_dd {
+	width:28%;
+	padding : 15px;
+	border : 1px solid #ddd;
+}
+
+#birth_yy+#birth_mm, #birth_mm+#birth_dd {
+	padding-left: 15px;
+}
